chore: created localizations for link labels

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,11 @@
 {
+  "links": {
+    "home": "Home",
+    "about-us": "About us",
+    "services": "Services",
+    "portfolio": "Portfolio",
+    "contact": "Contact"
+  },
   "home": {
     "hero": {
       "title": "Build your online presence",
