feat: changed links to navigation and added footer localizations

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,10 +1,16 @@
 {
-  "links": {
+  "navigation": {
     "home": "Home",
     "about-us": "About us",
     "services": "Services",
     "portfolio": "Portfolio",
     "contact": "Contact"
+  },
+  "footer": {
+    "discover": "Discover",
+    "contact": "Contact",
+    "contact-us": "Contact us",
+    "copyright": "All rights reserved."
   },
   "home": {
     "hero": {
